publish: add transition to prevent funny flickering and make it nicer anyway :D
generated from commit bfded1cecc79c9626b92380ff97815eec86c97c5

--- a/css/index.css
+++ b/css/index.css
@@ -158,6 +158,9 @@ code {
 
 #renderedLines > .line {
     padding: 0.5em;
+
+    transition-property: background-color;
+    transition-duration: 250ms;   /* shorter is unnoticable, longer is annoying */
 }
 
 #renderedLines > .line > p {
